# spotprice

./: .editorconfig  .gitignore  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: android.yml  fuzz.yml  pin-expiry-check.yml  pin-rotation.yml  release.yml  security.yml
app/: gradle.properties  settings.gradle.kts
app/composeApp/: build.gradle.kts  proguard-rules.pro
app/composeApp/src/androidMain/: AndroidManifest.xml
app/composeApp/src/androidMain/kotlin/price/sats/: AndroidModule.kt  AndroidPriceCore.kt  MainActivity.kt  SatsPriceApplication.kt  SpotPriceApplication.kt
app/composeApp/src/androidMain/kotlin/price/sats/core/: satsprice_ffi.kt
app/composeApp/src/androidMain/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/composeApp/src/commonMain/kotlin/price/sats/: AboutScreen.kt  App.kt  AppModule.kt  ConverterScreen.kt  ConverterViewModel.kt  PriceCore.kt  SettingsScreen.kt  SourcesScreen.kt
app/composeApp/src/commonTest/kotlin/price/sats/: ComputeSatsTest.kt  FakePriceCore.kt  NormalizeAmountTest.kt
app/gradle/: libs.versions.toml
core/: Cargo.toml
core/aggregator/: Cargo.toml
core/aggregator/src/: lib.rs  median.rs  trust.rs  types.rs
core/cache/: Cargo.toml
core/cache/src/: lib.rs
core/convert/: Cargo.toml
core/convert/src/: lib.rs
core/ffi/: Cargo.toml  uniffi.toml
core/ffi/src/: lib.rs
core/price-sources/: Cargo.toml
core/price-sources/fuzz/: Cargo.toml  README.md
core/price-sources/fuzz/fuzz_targets/: bitstamp.rs  coinbase.rs  coingecko.rs  kraken.rs
core/price-sources/src/: bitstamp.rs  coinbase.rs  coingecko.rs  error.rs  kraken.rs  lib.rs
docs/: CARGO-VET.md  PIN-ROTATION.md  PLAN-ios.md  PLAN.md  RELEASING.md  REPRODUCIBLE-BUILDS.md
fastlane/metadata/android/en-US/: full_description.txt  title.txt
scripts/: rotate_tls_pins.py
