[package]
name = "satsprice-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "satsprice_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
satsprice-aggregator = { path = "../aggregator" }
satsprice-cache = { path = "../cache" }
satsprice-convert = { path = "../convert" }
satsprice-price-sources = { path = "../price-sources" }

uniffi = { workspace = true, features = ["cli"] }
tokio = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[features]
default = []
# Enabled when bundling for mobile so the client uses rustls-platform-verifier
# (OS trust store via JNI on Android, SecTrust on iOS) instead of the bundled
# webpki-roots used during development.
mobile-tls = ["dep:rustls-platform-verifier"]

[dependencies.rustls-platform-verifier]
workspace = true
optional = true
