[package]
name = "satsprice-price-sources"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
satsprice-aggregator = { path = "../aggregator" }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = { workspace = true }
